--- a/sma-visualization/sma-visualization/Table.xaml
+++ b/sma-visualization/sma-visualization/Table.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sma_visualization"
         mc:Ignorable="d"
-        Title="Table" Height="450" Width="800">
+        Title="Table" Height="470" Width="800">
     <Grid>
-        
+        <StackPanel>
+            <Label HorizontalAlignment="Center">TABLE</Label>
+            <DataGrid x:Name="TableGrid" Height="400" Width="780" CanUserResizeRows="False" CanUserResizeColumns="False" RenderTransformOrigin="0.5,0.5">
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="#B4EDD2"/>
+                        <Setter Property="BorderBrush" Value="#A0CFD3"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="BorderThickness" Value="0,0,1,2"/>
+                    </Style>
+                </DataGrid.Resources>
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="SYMBOL" Width="*" Binding="{Binding Symbol}"/>
+                    <DataGridTextColumn Header="DATE" Width="*" Binding="{Binding Date}"/>
+                    <DataGridTextColumn Header="VALUE" Width="*" Binding="{Binding Value}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
     </Grid>
 </Window>
